@@ -1,3 +1,10 @@
+2002-12-01  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/pj_transform.c: Applied fix for 7 parameter shifts in 
+	pj_geocentric_from_wgs84() as per suggestion from Harald Lernbeiss in:
+
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=194
+
 2002-11-19  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/cs2cs.c: cleanup memory at end to facility memory leak testing.
